Add create, update, getAll and delete operations to DepartmentService